[gd_scene load_steps=4 format=2]

[ext_resource path="res://godot.gd" type="Script" id=1]
[ext_resource path="res://ILGJkLo.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 163.454, 232.055 )

[node name="Area2D" type="Area2D"]
position = Vector2( 90.2542, 146.323 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.35144, 1.18921 )
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
